# live_1_bilhao_linhas

./: .gitignore  README.md  etl_databricks  etl_duckdb.py  etl_pandas.py  etl_python.py  pyproject.toml
dashboard/: meu_dashboard_correto.py  meu_dashboard_errado.py
data/: measurements_summary.parquet
