[tool.poetry]
name = "1-bilhao-linhas"
version = "0.1.0"
description = ""
authors = ["Gustavo Dias <gust.weing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.5"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
